# untimely

./: .gitignore  Cargo.toml  README.md
examples/: clock_plots.rs
examples/box_game/: Cargo.toml  server.py
examples/box_game/src/: draw.rs  game.rs  lib.rs
examples/box_game/src/examples/: example.rs  example_00_local.rs  example_01_client_server.rs  example_01_server_client.rs  mod.rs  runner.rs  util.rs
examples/box_game/static/: index.html
examples/demo/: Cargo.toml  Makefile  server.py
examples/demo/src/: draw.rs  figure.rs  game.rs  input.rs  lib.rs
examples/demo/src/figures/: figure1.rs  figure2.rs  figure3.rs  mod.rs
examples/demo/static/: index.html
examples/research/: clock_plots.rs
src/: clock.rs  join.rs  lib.rs  metrics.rs  tick_buffer.rs  tick_stream.rs  types.rs
src/channel/: mod.rs  sim_net_channel.rs
src/mock/: channel.rs  mod.rs  net.rs  socket.rs
src/tick/: dejitter.rs  mod.rs  num.rs  playback.rs  prediction.rs
src/time/: client_game_clock.rs  local.rs  mod.rs  periodic.rs  periodic_timer.rs  playback.rs  samples.rs  stream.rs  tick_num.rs  time.rs  time_mapping.rs
src/util/: diff.rs  join.rs  mod.rs  random_var.rs
