[package]
name = "untimely"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
pareen = { git = "https://github.com/leod/pareen.git", branch = "regression" }

[dev-dependencies]
gnuplot = "0.0.37"
rand = "0.8"
rand_distr = "0.4"

[[example]]
name = "clock_plots"
path = "examples/research/clock_plots.rs"

[workspace]
members = [
    "examples/box_game",
]