[package]
name = "untimely-demo"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
nalgebra = "0.23"

rand = "0.8"
rand_distr = "0.4"

# This is necessary so that thread_rng() does not panic on wasm targets
getrandom = { version = "0.2", features = ["js"] }

malen = { git = "https://github.com/leod/malen.git", branch = "plots" }
untimely = { path = "../../" }